# src/routes/laporanRoutes.ts
@@ -1,10 +1,11 @@
 import { Router } from "express";
 import { createLaporan, getLaporan, getLaporanById } from "../controllers/laporanController";
-import { uploadFile } from "../middlewares/uploadMiddleware";
+import { verifyToken } from "../middlewares/authMiddleware";
+import { requireRole } from "../middlewares/roleMiddleware";
 
 const router = Router();
 
-router.post("/", uploadFile.single("foto"), createLaporan);
+router.post("/", verifyToken, requireRole("school", "sekolah"), createLaporan);
 router.get("/", getLaporan);
 router.get("/:id", getLaporanById);
 
